test/events/invalidValues/execute.js
export const eventHandler = {
    name: "validName",
    isOnce: false,
    isPrepend: false,
    execute: 1,
};
